--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
       var TOKEN_RELOAD_ONORIENTATIONCHANGE = true;
     </script>
     <script type="demo">
-      ###DEMOTARGET###
+      DEMOTARGET
     </script>
     <script>
       (function(){var doc=document;var header=doc.getElementsByTagName("header")[0];var firstChild=header.firstChild;var p=doc.getElementsByClassName("p")[0];
