--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
       // should the size be smaller than specified if viewport is smaller?
       var TOKEN_MAX_100P = true;
       // only if width<100%
-      var TOKEN_CENTER_CANVAS = false;
+      var TOKEN_CENTER_CANVAS = true;
       // "press" reload button on orientation change?
       var TOKEN_RELOAD_ONORIENTATIONCHANGE = true;
     </script>
